appId: io.github.lordraydenmk.themoviedbapp
---
- launchApp
- tapOn: "Karate Kid: Legends"
- assertVisible: "After a family tragedy*"
- runFlow: reusable/trigger-process-death.yml
- assertVisible: "After a family tragedy*"